--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -15,18 +15,6 @@
     font-display: swap;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-ul,
-li,
-a,
-p,
-div,
-button,
-input {
-    font-family: "Sans Regular" !important;
+* {
+    font-family: "Red Hat Display", sans-serif !important;
 }
