--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,9 @@
 @import './layout/map';
 @import './layout/chatbot';
 
+// Block
+@import './block/block-titre-texte';
+@import './block/block-header-home';
 
 // Pages
 @import './pages/carte-des-regions';
