--- a/css/admin.css
+++ b/css/admin.css
@@ -7,7 +7,6 @@ html :where(.wp-block) {
     display: none;
 }
 
-/* .block-editor-block-toolbar:nth-child(1),
-.block-editor-block-toolbar:nth-child(2) {
+.block-editor-block-toolbar .components-toolbar-group:nth-child(1) {
     display: none;
-} */
+}
