--- a/scss/block/_block-header-home.scss
+++ b/scss/block/_block-header-home.scss
@@ -26,7 +26,8 @@
         }
 
         p {
-            font-size: 3rem
+            font-size: 3rem;
+            text-align: center;
         }
     }
 }
