--- a/css/main.css
+++ b/css/main.css
@@ -453,12 +453,27 @@ a:visited {
   margin: auto;
   padding: 3% 0;
 }
+@media (max-width: 1700px) {
+  .block-titre-texte .block {
+    padding: 2% 3%;
+  }
+}
 .block-titre-texte .block h2 {
   font-size: 5rem;
+}
+@media (max-width: 1700px) {
+  .block-titre-texte .block h2 {
+    font-size: 4rem;
+  }
 }
 .block-titre-texte .block .texte {
   width: 60%;
   font-size: 3rem;
+}
+@media (max-width: 1700px) {
+  .block-titre-texte .block .texte {
+    font-size: 2rem;
+  }
 }
 
 .block-header-home {
@@ -487,8 +502,13 @@ a:visited {
 .block-header-home .texte h1 {
   font-size: 6rem;
 }
+@media (max-width: 1700px) {
+  .block-header-home .texte h1 {
+    font-size: 5rem;
+  }
+}
 .block-header-home .texte p {
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
 }
 
